# some_monorepo

./: create_packages.py  create_random_file.py
pkg_1/: pyproject.toml
pkg_1/pkg_1/: hello.py
pkg_2/: pyproject.toml
pkg_2/pkg_2/: hello.py
pkg_3/: pyproject.toml
pkg_3/pkg_3/: hello.py
pkg_4/: pyproject.toml
pkg_4/pkg_4/: hello.py
pkg_5/: pyproject.toml
pkg_5/pkg_5/: hello.py
pkg_a/: pyproject.toml
pkg_b/: pyproject.toml
